# PoetryEnvManagingPackages

./: README.rst  pyproject.toml
poetryenvmanagingpackages/: currency.py
poetryenvmanagingpackages.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_poetryenvmanagingpackages.py
